--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/ServQLTerminal
+/ServQLTerminal/obj
+/ServQLTerminal/bin
