--- a/ServQLTerminal/ServQLTerminal.csproj
+++ b/ServQLTerminal/ServQLTerminal.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <Reference Include="ServQLClient">
-      <HintPath>..\..\ServQLClient\ServQLClient\bin\Debug\netcoreapp3.1\ServQLClient.dll</HintPath>
+      <HintPath>..\..\ServQL Client\ServQLClient\bin\Release\netcoreapp3.1\ServQLClient.dll</HintPath>
     </Reference>
   </ItemGroup>
 
