--- a/ServQLTerminal/ServQLTerminal.csproj
+++ b/ServQLTerminal/ServQLTerminal.csproj
@@ -1,13 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="SmazSharp" Version="0.1.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="ServQLClient">
